--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "bootstrap": "^3.2.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0"
+    "angular-sanitize": "^1.4.0",
+    "ngInfiniteScroll": "^1.3.4",
+    "angular-bootstrap": "^2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
